--- a/template.html
+++ b/template.html
@@ -18,30 +18,30 @@
           <div class="card">
             <img src="https://dvmn.org/filer/canonical/1569333143/329/" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">New York Yankees</h5>
-              <p class="card-text">Красная кепка NY Yankees за 20$ снова в продаже!</p>
+              <h5 class="card-title">{{cap1_title}}</h5>
+              <p class="card-text">{{cap1_text}}</p>
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
+           </div>
           </div>
         </div>
         <div class="col-4">
           <div class="card">
             <img src="https://dvmn.org/filer/canonical/1569333143/330/" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Los Angeles Dodgers</h5>
-              <p class="card-text">Чёрная кепка LA Dodgers за 20$ снова в продаже!</p>
+              <h5 class="card-title">{{cap2_title}}</h5>
+              <p class="card-text">{{cap2_text}}</p>
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
+           </div>
           </div>
         </div>
         <div class="col-4">
           <div class="card">
             <img src="https://dvmn.org/filer/canonical/1569333144/331/" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Los Angeles Kings</h5>
-              <p class="card-text">Чёрная кепка LA Kings с коричневым козырьком за 20$</p>
+              <h5 class="card-title">{{cap3_title}}</h5>
+              <p class="card-text">{{cap3_text}}</p>
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
+           </div>
           </div>
         </div>
       </div>
