--- a/template.html
+++ b/template.html
@@ -181,7 +181,7 @@
                 <h3 class="heading mt-3 mb-3 text-dark">Шардоне</h3>
                 <p>
                   Сорт винограда - Шардоне<br/>
-                  <span class="price">350 р.</span>
+                  <span class="price">350 р.</span>   
                 </p>
               </div>
             </div>
@@ -196,7 +196,7 @@
         <div class="row justify-content-center text-center align-items-center">
           <div class="col-md-8">
             <h2 style="font-size: 3rem;">проверено временем</h2>
-            <span class="sub-title" style="font-size: 2.5rem;">Уже {{winery_age}} лет с вами</span>
+            <span class="sub-title" style="font-size: 2.5rem;">Уже {{winery_age}} года с вами</span>
           </div>
         </div>
       </div>
