--- a/template.html
+++ b/template.html
@@ -196,7 +196,7 @@
         <div class="row justify-content-center text-center align-items-center">
           <div class="col-md-8">
             <h2 style="font-size: 3rem;">проверено временем</h2>
-            <span class="sub-title" style="font-size: 2.5rem;">Уже {{winery_age}} года с вами</span>
+            <span class="sub-title" style="font-size: 2.5rem;">Уже {{winery_age}} {{winery_age_suffix}} с вами</span>
           </div>
         </div>
       </div>
