--- a/template.html
+++ b/template.html
@@ -114,19 +114,21 @@
           </div>
         </div>
         <div class="row">
-          {% for wine in wines %}
-            <div class="col-lg-4 mb-5 col-md-6">
-              <div class="wine_v_1 text-center pb-4 pt-5">
-                <img src="images/{{wine.Картинка}}" alt="Image" class="img-fluid">
-                <div>
-                  <h3 class="heading mt-3 mb-3 text-dark">{{wine.Название}}</h3>
-                  <p>
-                    Сорт винограда - {{wine.Сорт}}<br/>
-                    <span class="price">{{wine.Цена}} р.</span>
-                  </p>
+          {% for category in wine_categories %}
+            {% for wine in wine_categories[category] %}
+              <div class="col-lg-4 mb-5 col-md-6">
+                <div class="wine_v_1 text-center pb-4 pt-5">
+                  <img src="images/{{wine.Картинка}}" alt="Image" class="img-fluid">
+                  <div>
+                    <h3 class="heading mt-3 mb-3 text-dark">{{wine.Название}}</h3>
+                    <p>
+                      Сорт винограда - {{wine.Сорт}}<br/>
+                      <span class="price">{{wine.Цена}} р.</span>
+                    </p>
+                  </div>
                 </div>
               </div>
-            </div>
+            {% endfor %}
           {% endfor %}
         </div>
       </div>
