clear the code from the indexes

--- a/template.html
+++ b/template.html
@@ -114,11 +114,11 @@
           </div>
         </div>
         <div class="row">
-          {% for category in wine_categories %}
-          <div class="col-12 section-title text-center mb-5">
-            <h2 class="d-block">Коллекция вин</h2>
-          </div>
-            {% for wine in wine_categories[category] %}
+          {% for category, wines in wine_categories.items() %}
+            <div class="col-12 section-title text-center mb-5">
+              <h2 class="d-block">Коллекция вин</h2>
+            </div>
+            {% for wine in wines %}
               <div class="col-lg-4 mb-5 col-md-6">
                 <div class="wine_v_1 text-center pb-4 pt-5">
                   <img src="images/{{wine.Картинка}}" alt="Image" class="img-fluid">
